--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
     <link rel="stylesheet" href="css/main.css">
-
+	<link rel="stylesheet" href="css/style.css">
+	
     <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
     <!-- All JavaScript at the bottom, except this Modernizr build.
@@ -30,6 +31,52 @@
     <script src="js/vendor/modernizr-2.5.3.min.js"></script>
 </head>
 <body>
+	<div id="top">
+		<div class="centerContainer">
+			<ul id="topMenu">
+				<li><a href="#">View your channel lineup</a>|</li>
+				<li><a href="#">See helpful TV tips</a>|</li>
+				<li><a href="#">Watch our TV spots</a></li>
+			</ul>
+		</div>
+	</div>
+	<div id="pageContainer">
+		<div class="centerContainer">
+			<div id="mainMenu">
+				<img src="img/charter-logo.png" width="151" height="57" id="logo" />
+				<ul id="nav">
+					<li><a href="#" class="active">The Future of TV</a></li>
+					<li><a href="#">Free HD</a></li>
+					<li><a href="#">TV Everywhere</a></li>
+					<li><a href="#">Charter On Demand</a></li>
+					<li><a href="#">Charter DVR<sup>&reg;</sup></a></li>
+					<li><a href="#">The Future Is Now</a></li>
+					<li><a href="#">Order Charter</a></li>
+				</ul>
+			</div>
+			<div id="page1" class="page">
+				<div class="heading">
+					<h1>Welcome to the Future of TV.</h1>
+					<h2>Entertainment is better when it’s everywhere.</h2>
+				</div>
+				
+				<div id="content">
+					<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, 10,000+ On Demand options, 3D movies On Demand, multi-device streaming and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
+				</div>
+			</div>
+			<div id="page2" class="page">
+				<div class="heading">
+					<h1>Welcome to the Future of TV.</h1>
+					<h2>Entertainment is better when it’s everywhere.</h2>
+				</div>
+				
+				<div id="content">
+					<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, 10,000+ On Demand options, 3D movies On Demand, multi-device streaming and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+		
     <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
          chromium.org/developers/how-tos/chrome-frame-getting-started -->
     <!--[if lt IE 7]><p class="chromeframe">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
