a few touch-up fixes, looking to wrangle the parallax

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <!--[if lt IE 7]><p class="chromeframe">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
     <!-- Add your site or application content here -->
-	<ul id="topMenu">
-		<div class="centerContainer">
+	<nav>
+		<ul class="centerContainer">
 			<li><a href="#">View your channel lineup</a>|</li>
 			<li><a href="#">See helpful TV tips</a>|</li>
 			<li><a href="#">Watch our TV spots</a></li>
-		</div>
-	</ul>
+		</ul>
+	</nav>
 	
     <ul style="top: 209px;" id="nav">
 		<li><a href="#intro" title="The Future of TV" class="active">The Future of TV</a></li>
