Adding prototype rainbow code

--- a/index.html
+++ b/index.html
@@ -56,6 +56,31 @@
     </ul>
 
     <div id="intro" class="page">
+
+    	<div class="rainbow-layer">
+			<div class="rainbow1 vert">
+			    <div class="beam red"></div>
+			    <div class="beam orange"></div>
+			    <div class="beam yellow"></div>
+			    <div class="beam green"></div>
+			    <div class="beam blue"></div>
+			    <div class="beam indigo"></div>
+			    <div class="beam violet"></div>
+			</div>
+
+			<div class="rainbow2 horz">
+			    <div class="beam red"></div>
+			    <div class="beam orange"></div>
+			    <div class="beam yellow"></div>
+			    <div class="beam green"></div>
+			    <div class="beam blue"></div>
+			    <div class="beam indigo"></div>
+			    <div class="beam violet"></div>
+			</div>
+
+			<button name="play" value="play">play</button>
+			<button name="reverse" value="reverse">reverse</button>
+​		</div>
         <div class="content">
             <!--
 			<div style="height: 642px" class="bg"></div>
@@ -172,9 +197,12 @@
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
     <script src="js/jquery_002.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
+    <script type="text/javascript" src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TweenMax.min.js"></script>
+	<script type="text/javascript" src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TimelineMax.min.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery_003.js"></script>
     <script type="text/javascript" src="js/jquery_004.js"></script>
+    <script type="text/javascript" src="js/rainbow.js"></script>
 
     <!-- scripts concatenated and minified via build script -->
     <script src="js/plugins.js"></script>
