Intro rainbows roughed in

--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
 			    <div class="beam violet"></div>
 			</div>
 
-			<div class="rainbow2 horz">
+			<div class="rainbow2 horz clearfix">
+			    <div class="beam red"></div>
+			    <div class="beam orange"></div>
+			    <div class="beam yellow"></div>
+			    <div class="beam green"></div>
+			    <div class="beam blue"></div>
+			    <div class="beam indigo"></div>
+			    <div class="beam violet"></div>
+			</div>
+
+			<div class="rainbow3 vert">
 			    <div class="beam red"></div>
 			    <div class="beam orange"></div>
 			    <div class="beam yellow"></div>
