Rainbow styled to comp

--- a/index.html
+++ b/index.html
@@ -59,33 +59,44 @@
 
     	<div class="rainbow-layer">
 			<div class="rainbow1 vert">
-			    <div class="beam red"></div>
-			    <div class="beam orange"></div>
-			    <div class="beam yellow"></div>
+			    <div class="beam magenta"></div>
 			    <div class="beam green"></div>
+			    <div class="beam yellow"></div>
+			    <div class="beam red"></div>
+			    <div class="beam lt-green"></div>
 			    <div class="beam blue"></div>
-			    <div class="beam indigo"></div>
-			    <div class="beam violet"></div>
+			    <div class="beam orange"></div>
+			    <div class="beam gold"></div>
+			    <div class="beam lt-blue"></div>
+			    <div class="beam dk-green"></div>
+				<img class="corner" src="img/rainbow_corner_lr.png" />
 			</div>
 
 			<div class="rainbow2 horz clearfix">
-			    <div class="beam red"></div>
-			    <div class="beam orange"></div>
-			    <div class="beam yellow"></div>
+				<img class="corner" src="img/rainbow_corner_ul.png" />
+			    <div class="beam magenta"></div>
 			    <div class="beam green"></div>
+			    <div class="beam yellow"></div>
+			    <div class="beam red"></div>
+			    <div class="beam lt-green"></div>
 			    <div class="beam blue"></div>
-			    <div class="beam indigo"></div>
-			    <div class="beam violet"></div>
+			    <div class="beam orange"></div>
+			    <div class="beam gold"></div>
+			    <div class="beam lt-blue"></div>
+			    <div class="beam dk-green"></div>
 			</div>
 
 			<div class="rainbow3 vert">
-			    <div class="beam red"></div>
-			    <div class="beam orange"></div>
-			    <div class="beam yellow"></div>
+			    <div class="beam magenta"></div>
 			    <div class="beam green"></div>
+			    <div class="beam yellow"></div>
+			    <div class="beam red"></div>
+			    <div class="beam lt-green"></div>
 			    <div class="beam blue"></div>
-			    <div class="beam indigo"></div>
-			    <div class="beam violet"></div>
+			    <div class="beam orange"></div>
+			    <div class="beam gold"></div>
+			    <div class="beam lt-blue"></div>
+			    <div class="beam dk-green"></div>
 			</div>
 
 			<button name="play" value="play">play</button>
