page nav is reacting to scrolling, updating active state appropriately

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
 		<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
 		<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
-		<div><a href="#" title="Order Charter">Order Charter</a></div>
+		<li class="cta"><a href="#" title="Order Charter">Order Charter</a></li>
     </ul>
 
     <div id="intro" class="page">
