Adding fifth page content

--- a/index.html
+++ b/index.html
@@ -271,6 +271,15 @@
             <!--
 			<div style="height: 642px" class="bg"></div>
 			-->
+            <div class="heading">
+				<h1>The Future of TV is Now.</h1>
+				<h2>And it’s only available with Charter.</h2>
+			</div>
+			
+			<div class="copy">
+				<p>All this entertainment, including the best HD, mobile channel apps, tons of On Demand and much more, is only a click away. Enjoy the future of TV—today.</p> 
+				<p>Don't have Charter? Order today and Let It All In.</p>
+			</div>
 			
         </div>
     </div>
