--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			</div>
 			
 			<div class="copy">
-				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, 10,000+ On Demand options, 3D movies On Demand, multi-device streaming and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
+				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, over 10,000 On Demand titles, over 1,500 HD On Demand titles including movies in 3D, mobile channel apps and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
 			</div>
 			
         </div>
