Channel app carousel functionality working

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				<p>The future is having your cake and eating it, too. You can now enjoy a huge selection of HD channels featuring the best shows, movies, sports and more, plus anytime HD access with 1,500+ HD On Demand options. And the best part? <b>HD is FREE with your Charter TV&reg; service.</b></p>
 			</div>
 			
-			<div class="channelLineup"></div>
+			<div class="carousel channelLineup"></div>
 			
 		</div>
     </div>
@@ -177,9 +177,26 @@
 			
 			<div class="copy">
 				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on your smartphone, tablet or computer.</p>
-				<p class="caption">True Blood&reg; on HBO GO&reg;. HBO GO is free (or included at no additional cost) with your HB&reg; subscription.</p>
+				<p class="caption">True Blood&reg; on HBO GO&reg;. HBO GO is free (or included at no additional cost) with your HB&reg; subscription.</p>
 				
-				<div class="channelLineup"></div>
+				<div class="carousel apps channelLineup">
+					<a class="left carousel_advance">&lt;</a>
+					<div class="carousel_area">
+						<div class="app_links clearfix">
+							<a class="app_icon" href="#">1</a>
+							<a class="app_icon" href="#">2</a>
+							<a class="app_icon" href="#">3</a>
+							<a class="app_icon" href="#">4</a>
+							<a class="app_icon" href="#">5</a>
+							<a class="app_icon" href="#">6</a>
+							<a class="app_icon" href="#">7</a>
+							<a class="app_icon" href="#">8</a>
+							<a class="app_icon" href="#">9</a>
+							<a class="app_icon" href="#">0</a>
+						</div>
+					</div>
+					<a class="right carousel_advance">&gt;</a>
+				</div>
 			</div>
 			
 		</div>
