Floating page nav postions relative to content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--[if lt IE 7]><p class="chromeframe">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
     <!-- Add your site or application content here -->
-	<nav>
+	<nav class="top">
 		<ul class="centerContainer">
 			<li><a href="#">View your channel lineup</a>|</li>
 			<li><a href="#">See helpful TV tips</a>|</li>
@@ -45,15 +45,17 @@
 		</ul>
 	</nav>
 	
-    <ul style="top: 209px;" id="nav">
-		<li><a href="#intro" title="The Future of TV" class="active">The Future of TV</a></li>
-		<li><a href="#first" title="Free HD">Free HD</a></li>
-		<li><a href="#second" title="TV Everywhere">TV Everywhere</a></li>
-		<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
-		<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
-		<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
-		<li class="cta"><a href="#" title="Order Charter">Order Charter</a></li>
-    </ul>
+	<nav class="floating">
+	    <ul>
+			<li><a href="#intro" title="The Future of TV" class="active">The Future of TV</a></li>
+			<li><a href="#first" title="Free HD">Free HD</a></li>
+			<li><a href="#second" title="TV Everywhere">TV Everywhere</a></li>
+			<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
+			<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
+			<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
+			<li class="cta"><a href="#" title="Order Charter">Order Charter</a></li>
+	    </ul>
+	</nav>
 
     <div id="intro" class="page">
 
