--- a/index.html
+++ b/index.html
@@ -181,24 +181,26 @@
 				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on your smartphone, tablet or computer.</p>
 				<p class="caption">True Blood&reg; on HBO GO&reg;. HBO GO is free (or included at no additional cost) with your HB&reg; subscription.</p>
 				
+				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="#">Browse All Networks</a></h5>
 				<div class="carousel apps channelLineup">
-					<a class="left carousel_advance">&lt;</a>
+					<a class="left carousel_advance"></a>
 					<div class="carousel_area">
 						<div class="app_links clearfix">
-							<a class="app_icon" href="#">1</a>
-							<a class="app_icon" href="#">2</a>
-							<a class="app_icon" href="#">3</a>
-							<a class="app_icon" href="#">4</a>
-							<a class="app_icon" href="#">5</a>
-							<a class="app_icon" href="#">6</a>
-							<a class="app_icon" href="#">7</a>
-							<a class="app_icon" href="#">8</a>
-							<a class="app_icon" href="#">9</a>
-							<a class="app_icon" href="#">0</a>
+							<a class="app_icon btn2go" alt="BTN2GO" href="#"></a>
+							<a class="app_icon cnn" alt="CNN" href="#"></a>
+							<a class="app_icon epix" alt="EPIX" href="#"></a>
+							<a class="app_icon espn3" alt="ESPN3" href="#"></a>
+							<a class="app_icon hbogo" alt="HBOGO" href="#"></a>
+							<a class="app_icon maxgo" alt="MAXGO" href="#"></a>
+							<a class="app_icon tbs" alt="TBS" href="#"></a>
+							<a class="app_icon tnt" alt="TNT" href="#"></a>
+							<a class="app_icon toon" alt="Cartoon Network" href="#"></a>
+							<a class="app_icon trutv" alt="truTV" href="#"></a>
 						</div>
 					</div>
-					<a class="right carousel_advance">&gt;</a>
+					<a class="right carousel_advance"></a>
 				</div>
+				<p class="small">HBO GO&reg; and MAX GO&reg; are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO&reg; is included at no additional cost with your Cinemax&reg; subscription.  HBO&reg;, Cinemax&reg; and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
 			
 		</div>
