Added logo to nav

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 			<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
 			<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
 			<li class="cta"><a href="#" title="Order Charter">Order Charter</a></li>
+			<li class="logo"><a href="http://www.charter.com"></a></li>
 	    </ul>
 	</nav>
 
