Final rainbow functional, untested

--- a/index.html
+++ b/index.html
@@ -277,6 +277,19 @@
     <div id="fifth" class="page">
     	<div class="rainbow-layer">
 			<div class="rainbow3 vert">
+				<img class="corner" src="img/rainbow_corner_ll.png" />
+			    <div class="beam magenta"></div>
+			    <div class="beam green"></div>
+			    <div class="beam yellow"></div>
+			    <div class="beam red"></div>
+			    <div class="beam lt-green"></div>
+			    <div class="beam blue"></div>
+			    <div class="beam orange"></div>
+			    <div class="beam gold"></div>
+			    <div class="beam lt-blue"></div>
+			    <div class="beam dk-green"></div>
+			</div>
+			<div class="rainbow2 horz clearfix">
 			    <div class="beam magenta"></div>
 			    <div class="beam green"></div>
 			    <div class="beam yellow"></div>
@@ -311,16 +324,16 @@
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
     <script src="js/jquery_002.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
-    <script type="text/javascript" src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TweenMax.min.js"></script>
-	<script type="text/javascript" src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TimelineMax.min.js"></script>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/jquery_003.js"></script>
-    <script type="text/javascript" src="js/jquery_004.js"></script>
-    <script type="text/javascript" src="js/rainbow.js"></script>
+    <script src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TweenMax.min.js"></script>
+	<script src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TimelineMax.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery_003.js"></script>
+    <script src="js/jquery_004.js"></script>
 
     <!-- scripts concatenated and minified via build script -->
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/rainbow.js"></script>
     <!-- end scripts -->
 
     <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
