Adding fourth page content

--- a/index.html
+++ b/index.html
@@ -261,15 +261,14 @@
 			-->
 			
 			<div class="heading">
-				<h1>READY, SET, RECORD.</h1>
-				<h2>Thousands of options On Demand, all on Channel 1.</h2>
+				<h1>READY, SET, <br/>RECORD.</h1>
+				<h2>Enjoy a more powerful DVR experience.</h2>
 			</div>
 			
 			<div class="copy">
-				<h3>10,000+ On Demand options<br />1,500+ HD On Demand options<br />3D On Demand<br />Premiums On Demand</h3>
-				<p>Just go to Channel 1 and thousands of popular shows, blockbuster movies, exclusive content and even 3D movies are all available to you—instantly.</p>
-				<p>See what&rsquo;s On Demand</p>
-				<p class="caption">Fast Five on Cinemax&reg;. Cinemax is a subscription serviceand is required to view programming.</p>
+				<p>Reinvent the way you watch TV with new, more powerful DVRs. Create your own instant replays, pause live TV and record two shows or an entire season at once.</p>
+
+				<p>With 4 DVRs for only $19.99/mo and up to 780 hours of recording time, your whole home can watch what they want.</p>
 			</div>
 			
 		</div>
