--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 			</div>
 			
 			<div class="copy">
+				<div class="bg"></div>
 				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, over 10,000 On Demand titles, over 1,500 HD On Demand titles including movies in 3D, mobile channel apps and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
 			</div>
 			
@@ -306,13 +307,15 @@
 			<div style="height: 642px" class="bg"></div>
 			-->
             <div class="heading">
-				<h1>The Future of TV is Now.</h1>
+				<h1>The Future of <br/>TV is Now.</h1>
 				<h2>And it’s only available with Charter.</h2>
 			</div>
 			
 			<div class="copy">
+				<div class="bg"></div>
 				<p>All this entertainment, including the best HD, mobile channel apps, tons of On Demand and much more, is only a click away. Enjoy the future of TV—today.</p> 
 				<p>Don't have Charter? Order today and Let It All In.</p>
+				<p>
 			</div>
 			
         </div>
