--- a/index.html
+++ b/index.html
@@ -117,8 +117,12 @@
 			<div class="copy">
 				<div class="bg"></div>
 				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, over 10,000 On Demand titles, over 1,500 HD On Demand titles including movies in 3D, mobile channel apps and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
+				<div class="tootip">
+        			<p>Scroll down, the future is here
+        				<div class="arrow"></div>
+        			</p>
+        		</div>	
 			</div>
-			
         </div>
     </div>
     <div id="first" class="page">
