--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			</div>
 			
 			<div class="copy">
-				<p>The future is having your cake and eating it, too. You can now enjoy a huge selection of HD channels featuring the best shows, movies, sports and more, plus anytime HD access with 1,500+ HD On Demand options. And the best part? <b>HD is FREE with your Charter TV&reg; service.</b></p>
+				<p>The future is having your cake and eating it, too. You can now enjoy a huge selection of HD channels featuring the best shows, movies, sports and more, plus anytime HD access with 1,500+ HD On Demand options. And the best part? <b>HD is FREE with your Charter TV<sup>&reg;</sup> service.</b></p>
 			</div>
 			
 			<div class="carousel channelLineup"></div>
@@ -185,7 +185,7 @@
 			
 			<div class="copy">
 				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on your smartphone, tablet or computer.</p>
-				<p class="caption">True Blood&reg; on HBO GO&reg;. HBO GO is free (or included at no additional cost) with your HB&reg; subscription.</p>
+				<p class="caption">True Blood<sup>&reg;</sup> on HBO GO<sup>&reg;</sup>. HBO GO is free (or included at no additional cost) with your HBO<sup>&reg;</sup> subscription.</p>
 				
 				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="#">Browse All Networks</a></h5>
 				<div class="carousel apps channelLineup">
@@ -206,7 +206,7 @@
 					</div>
 					<a class="right carousel_advance"></a>
 				</div>
-				<p class="small">HBO GO&reg; and MAX GO&reg; are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO&reg; is included at no additional cost with your Cinemax&reg; subscription.  HBO&reg;, Cinemax&reg; and related channels and service marks are the property of Home Box Office, Inc.</p>
+				<p class="small">HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
 			
 		</div>
@@ -239,8 +239,10 @@
 			<div class="copy">
 				<h3>10,000+ On Demand options<br />1,500+ HD On Demand options<br />3D On Demand<br />Premiums On Demand</h3>
 				<p>Just go to Channel 1 and thousands of popular shows, blockbuster movies, exclusive content and even 3D movies are all available to you—instantly.</p>
-				<p>See what&rsquo;s On Demand</p>
-				<p class="caption">Fast Five on Cinemax&reg;. Cinemax is a subscription serviceand is required to view programming.</p>
+				<p><a href="#">See what&rsquo;s On Demand</a></p>
+				<p class="caption"><em>Fast Five</em> on Cinemax On Demand<sup>SM</sup>. Cinemax On Demand<sup>SM</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.
+					<span class="small">Cinemax and related channels and service marks are the property of Home Box Office, Inc.</span>
+				</p>
 			</div>
 				
 		</div>
@@ -274,6 +276,8 @@
 				<p>Reinvent the way you watch TV with new, more powerful DVRs. Create your own instant replays, pause live TV and record two shows or an entire season at once.</p>
 
 				<p>With 4 DVRs for only $19.99/mo and up to 780 hours of recording time, your whole home can watch what they want.</p>
+
+				<p class="small">Charter DVR receiver required for DVR service</p>
 			</div>
 			
 		</div>
