Adding clickthru URLs to hyperlinks

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <!-- Add your site or application content here -->
 	<nav class="top">
 		<ul class="centerContainer">
-			<li><a href="#">View your channel lineup</a>|</li>
-			<li><a href="#">See helpful TV tips</a>|</li>
-			<li><a href="#">Watch our TV spots</a></li>
+			<li><a href="http://www.myaccount.charter.com/customers/support.aspx?menuitem=63">View your channel lineup</a>|</li>
+			<li><a href="http://www.myaccount.charter.com/Customers/Support.aspx?MenuItem=2">See helpful TV tips</a>|</li>
+			<li><a href="http://www.youtube.com/user/CharterCommercials">Watch our TV spots</a></li>
 		</ul>
 	</nav>
 	
@@ -53,7 +53,7 @@
 			<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
 			<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
 			<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
-			<li class="cta"><a href="#" title="Order Charter">Order Charter</a></li>
+			<li class="cta"><a href="http://charter.com/" title="Order Charter">Order Charter</a></li>
 			<li class="logo"><a href="http://www.charter.com" title="Charter.com"></a></li>
 	    </ul>
 	</nav>
@@ -192,16 +192,16 @@
 					<a class="left carousel_advance"></a>
 					<div class="carousel_area">
 						<div class="app_links clearfix">
-							<a class="app_icon btn2go" alt="BTN2GO" href="#"></a>
-							<a class="app_icon cnn" alt="CNN" href="#"></a>
-							<a class="app_icon epix" alt="EPIX" href="#"></a>
-							<a class="app_icon espn3" alt="ESPN3" href="#"></a>
-							<a class="app_icon hbogo" alt="HBOGO" href="#"></a>
-							<a class="app_icon maxgo" alt="MAXGO" href="#"></a>
-							<a class="app_icon tbs" alt="TBS" href="#"></a>
-							<a class="app_icon tnt" alt="TNT" href="#"></a>
-							<a class="app_icon toon" alt="Cartoon Network" href="#"></a>
-							<a class="app_icon trutv" alt="truTV" href="#"></a>
+							<a class="app_icon btn2go" alt="BTN2GO" href="http://charter.net/tv/3/network/vendor/Big%20Ten%20Network/"></a>
+							<a class="app_icon cnn" alt="CNN" href="http://charter.net/tv/3/network/vendor/CNN/"></a>
+							<a class="app_icon epix" alt="EPIX" href="http://charter.net/tv/3/network/vendor/Epix/"></a>
+							<a class="app_icon espn3" alt="ESPN3" href="http://charter.net/tv/3/network/vendor/ESPN3/"></a>
+							<a class="app_icon hbogo" alt="HBOGO" href="http://charter.net/tv/3/network/vendor/HBO/"></a>
+							<a class="app_icon maxgo" alt="MAXGO" href="http://charter.net/tv/3/network/vendor/Cinemax/"></a>
+							<a class="app_icon tbs" alt="TBS" href="http://charter.net/tv/3/network/vendor/TBS/"></a>
+							<a class="app_icon tnt" alt="TNT" href="http://charter.net/tv/3/network/vendor/TNT/"></a>
+							<a class="app_icon toon" alt="Cartoon Network" href="http://charter.net/tv/3/network/vendor/Cartoon%20Network/"></a>
+							<a class="app_icon trutv" alt="truTV" href="http://charter.net/tv/3/network/vendor/TruTV/"></a>
 						</div>
 					</div>
 					<a class="right carousel_advance"></a>
@@ -239,7 +239,7 @@
 			<div class="copy">
 				<h3>10,000+ On Demand options<br />1,500+ HD On Demand options<br />3D On Demand<br />Premiums On Demand</h3>
 				<p>Just go to Channel 1 and thousands of popular shows, blockbuster movies, exclusive content and even 3D movies are all available to you—instantly.</p>
-				<p><a href="#">See what&rsquo;s On Demand</a></p>
+				<p><a href="http://www.charter.net/tv/login.php?prev_page=ptpb_vod%2Findex.php">See what&rsquo;s On Demand</a></p>
 				<p class="caption"><em>Fast Five</em> on Cinemax On Demand<sup>SM</sup>. Cinemax On Demand<sup>SM</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.
 					<span class="small">Cinemax and related channels and service marks are the property of Home Box Office, Inc.</span>
 				</p>
