more text revisions before internal content review

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<h2>Entertainment is better when it’s everywhere.</h2>
 			</div>
 			
-			<div class="copy">
+			<div class="copy clearfix">
 				<div class="bg"></div>
 				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, over 10,000 On Demand titles, over 1,500 HD On Demand titles including movies in 3D, mobile channel apps and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
 				<div class="tootip">
@@ -146,14 +146,15 @@
 			-->
 			
 			<div class="heading">
-				<h1>A WHOLE NEW LEVEL OF HI-DEF.</h1>
-				<h2>Now get 100+ HD channels. All for FREE.</h2>
+				<h1>100+ HD CHANNELS<br/>NOW AVAILABLE.</h1>
+				<h2>There’s always something amazing on.</h2>
 			</div>
 			
 			<div class="copy">
 				<p>The future is having your cake and eating it, too. You can now enjoy a huge selection of HD channels featuring the best shows, movies, sports and more, plus anytime HD access with 1,500+ HD On Demand options. And the best part? <b>HD is FREE with your Charter TV<sup>&reg;</sup> service.</b></p>
 			</div>
 			
+			<h5 class="carousel_header clearfix"><a href="http://charter.com/tv/hd">Learn more about HD</a></h5>
 			<div class="carousel channelLineup"></div>
 			
 		</div>
@@ -187,7 +188,7 @@
 				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on your smartphone, tablet or computer.</p>
 				<p class="caption">True Blood<sup>&reg;</sup> on HBO GO<sup>&reg;</sup>. HBO GO is free (or included at no additional cost) with your HBO<sup>&reg;</sup> subscription.</p>
 				
-				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="#">Browse All Networks</a></h5>
+				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/">Browse All Networks</a></h5>
 				<div class="carousel apps channelLineup">
 					<a class="left carousel_advance"></a>
 					<div class="carousel_area">
@@ -319,11 +320,14 @@
 				<h2>And it’s only available with Charter.</h2>
 			</div>
 			
-			<div class="copy">
+			<div class="copy clearfix">
 				<div class="bg"></div>
 				<p>All this entertainment, including the best HD, mobile channel apps, tons of On Demand and much more, is only a click away. Enjoy the future of TV—today.</p> 
 				<p>Don't have Charter? Order today and Let It All In.</p>
-				<p>
+				<p class="alt_services">Learn about other Charter Services:
+					<a href="http://charter.com/internet/overview">Surf the fastest speeds</a>
+					<a href="http://charter.com/phone/features">Make unlimited calls</a>
+				</p>
 			</div>
 			
         </div>
