external hyperlinks now open new window

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <!-- Add your site or application content here -->
 	<nav class="top">
 		<ul class="centerContainer">
-			<li><a href="http://www.myaccount.charter.com/customers/support.aspx?menuitem=63">View your channel lineup</a>|</li>
-			<li><a href="http://www.myaccount.charter.com/Customers/Support.aspx?MenuItem=2">See helpful TV tips</a>|</li>
-			<li><a href="http://www.youtube.com/user/CharterCommercials">Watch our TV spots</a></li>
+			<li><a href="http://www.myaccount.charter.com/customers/support.aspx?menuitem=63" target="_blank">View your channel lineup</a>|</li>
+			<li><a href="http://www.myaccount.charter.com/Customers/Support.aspx?MenuItem=2" target="_blank">See helpful TV tips</a>|</li>
+			<li><a href="http://www.youtube.com/user/CharterCommercials" target="_blank">Watch our TV spots</a></li>
 		</ul>
 	</nav>
 	
@@ -53,8 +53,8 @@
 			<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
 			<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
 			<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
-			<li class="cta"><a href="http://charter.com/" title="Order Charter">Order Charter</a></li>
-			<li class="logo"><a href="http://www.charter.com" title="Charter.com"></a></li>
+			<li class="cta"><a href="http://charter.com/" title="Order Charter" target="_blank">Order Charter</a></li>
+			<li class="logo"><a href="http://www.charter.com" title="Charter.com" target="_blank"></a></li>
 	    </ul>
 	</nav>
 
@@ -154,7 +154,7 @@
 				<p>The future is having your cake and eating it, too. You can now enjoy a huge selection of HD channels featuring the best shows, movies, sports and more, plus anytime HD access with 1,500+ HD On Demand options. And the best part? <b>HD is FREE with your Charter TV<sup>&reg;</sup> service.</b></p>
 			</div>
 			
-			<h5 class="carousel_header clearfix"><a href="http://charter.com/tv/hd">Learn more about HD</a></h5>
+			<h5 class="carousel_header clearfix"><a href="http://charter.com/tv/hd" target="_blank">Learn more about HD</a></h5>
 			<div class="carousel channelLineup"></div>
 			
 		</div>
@@ -188,24 +188,24 @@
 				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on your smartphone, tablet or computer.</p>
 				<p class="caption">True Blood<sup>&reg;</sup> on HBO GO<sup>&reg;</sup>. HBO GO is free (or included at no additional cost) with your HBO<sup>&reg;</sup> subscription.</p>
 				
-				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/">Browse All Networks</a></h5>
+				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse All Networks</a></h5>
 				<div class="carousel apps channelLineup">
-					<a class="left carousel_advance"></a>
+					<a class="left carousel_advance" href="#"></a>
 					<div class="carousel_area">
 						<div class="app_links clearfix">
-							<a class="app_icon btn2go" alt="BTN2GO" href="http://charter.net/tv/3/network/vendor/Big%20Ten%20Network/"></a>
-							<a class="app_icon cnn" alt="CNN" href="http://charter.net/tv/3/network/vendor/CNN/"></a>
-							<a class="app_icon epix" alt="EPIX" href="http://charter.net/tv/3/network/vendor/Epix/"></a>
-							<a class="app_icon espn3" alt="ESPN3" href="http://charter.net/tv/3/network/vendor/ESPN3/"></a>
-							<a class="app_icon hbogo" alt="HBOGO" href="http://charter.net/tv/3/network/vendor/HBO/"></a>
-							<a class="app_icon maxgo" alt="MAXGO" href="http://charter.net/tv/3/network/vendor/Cinemax/"></a>
-							<a class="app_icon tbs" alt="TBS" href="http://charter.net/tv/3/network/vendor/TBS/"></a>
-							<a class="app_icon tnt" alt="TNT" href="http://charter.net/tv/3/network/vendor/TNT/"></a>
-							<a class="app_icon toon" alt="Cartoon Network" href="http://charter.net/tv/3/network/vendor/Cartoon%20Network/"></a>
-							<a class="app_icon trutv" alt="truTV" href="http://charter.net/tv/3/network/vendor/TruTV/"></a>
+							<a class="app_icon btn2go" alt="BTN2GO" href="http://charter.net/tv/3/network/vendor/Big%20Ten%20Network/" target="_blank"></a>
+							<a class="app_icon cnn" alt="CNN" href="http://charter.net/tv/3/network/vendor/CNN/" target="_blank"></a>
+							<a class="app_icon epix" alt="EPIX" href="http://charter.net/tv/3/network/vendor/Epix/" target="_blank"></a>
+							<a class="app_icon espn3" alt="ESPN3" href="http://charter.net/tv/3/network/vendor/ESPN3/" target="_blank"></a>
+							<a class="app_icon hbogo" alt="HBOGO" href="http://charter.net/tv/3/network/vendor/HBO/" target="_blank"></a>
+							<a class="app_icon maxgo" alt="MAXGO" href="http://charter.net/tv/3/network/vendor/Cinemax/" target="_blank"></a>
+							<a class="app_icon tbs" alt="TBS" href="http://charter.net/tv/3/network/vendor/TBS/" target="_blank"></a>
+							<a class="app_icon tnt" alt="TNT" href="http://charter.net/tv/3/network/vendor/TNT/" target="_blank"></a>
+							<a class="app_icon toon" alt="Cartoon Network" href="http://charter.net/tv/3/network/vendor/Cartoon%20Network/" target="_blank"></a>
+							<a class="app_icon trutv" alt="truTV" href="http://charter.net/tv/3/network/vendor/TruTV/" target="_blank"></a>
 						</div>
 					</div>
-					<a class="right carousel_advance"></a>
+					<a href="#" class="right carousel_advance" target="_blank"></a>
 				</div>
 				<p class="small">HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
@@ -240,7 +240,7 @@
 			<div class="copy">
 				<h3>10,000+ On Demand options<br />1,500+ HD On Demand options<br />3D On Demand<br />Premiums On Demand</h3>
 				<p>Just go to Channel 1 and thousands of popular shows, blockbuster movies, exclusive content and even 3D movies are all available to you—instantly.</p>
-				<p><a href="http://www.charter.net/tv/login.php?prev_page=ptpb_vod%2Findex.php">See what&rsquo;s On Demand</a></p>
+				<p><a href="http://www.charter.net/tv/login.php?prev_page=ptpb_vod%2Findex.php" target="_blank">See what&rsquo;s On Demand</a></p>
 				<p class="caption"><em>Fast Five</em> on Cinemax On Demand<sup>SM</sup>. Cinemax On Demand<sup>SM</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.
 					<span class="small">Cinemax and related channels and service marks are the property of Home Box Office, Inc.</span>
 				</p>
@@ -325,8 +325,8 @@
 				<p>All this entertainment, including the best HD, mobile channel apps, tons of On Demand and much more, is only a click away. Enjoy the future of TV—today.</p> 
 				<p>Don't have Charter? Order today and Let It All In.</p>
 				<p class="alt_services">Learn about other Charter Services:
-					<a href="http://charter.com/internet/overview">Surf the fastest speeds</a>
-					<a href="http://charter.com/phone/features">Make unlimited calls</a>
+					<a href="http://charter.com/internet/overview" target="_blank">Surf the fastest speeds</a>
+					<a href="http://charter.com/phone/features" target="_blank">Make unlimited calls</a>
 				</p>
 			</div>
 			
