HD carousel works in Firefox now

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			</div>
 			
 			<h5 class="carousel_header clearfix"><a href="http://charter.com/tv/hd" target="_blank">Learn more about HD</a></h5>
-			<div class="carousel channelLineup"></div>
+			<div class="carousel channelLineup"><div class="carousel_area"></div></div>
 			
 		</div>
     </div>
