internal revisions to content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<nav class="floating">
 	    <ul>
 			<li><a href="#intro" title="The Future of TV" class="active">The Future of TV</a></li>
-			<li><a href="#first" title="Free HD">Free HD</a></li>
+			<li><a href="#first" title="Charter TV in HD">Charter TV in HD</a></li>
 			<li><a href="#second" title="TV Everywhere">TV Everywhere</a></li>
 			<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
 			<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
@@ -152,10 +152,10 @@
 			
 			<div class="copy">
 				<p>The future is having your cake and eating it, too. You can now enjoy a huge selection of HD channels featuring the best shows, movies, sports and more, plus anytime HD access with 1,500+ HD On Demand options. And the best part? <b>HD is FREE with your Charter TV<sup>&reg;</sup> service.</b></p>
+				<h5 class="carousel_header clearfix"><a href="http://charter.com/tv/hd" target="_blank">Learn more about HD</a></h5>
+				<div class="carousel channelLineup"><div class="carousel_area"></div></div>
+				<p class="small">TV equipment required and is extra</p>
 			</div>
-			
-			<h5 class="carousel_header clearfix"><a href="http://charter.com/tv/hd" target="_blank">Learn more about HD</a></h5>
-			<div class="carousel channelLineup"><div class="carousel_area"></div></div>
 			
 		</div>
     </div>
@@ -185,7 +185,7 @@
 			</div>
 			
 			<div class="copy">
-				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on your smartphone, tablet or computer.</p>
+				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on Apple and Android devices.</p>
 				<p class="caption">True Blood<sup>&reg;</sup> on HBO GO<sup>&reg;</sup>. HBO GO is free (or included at no additional cost) with your HBO<sup>&reg;</sup> subscription.</p>
 				
 				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse All Networks</a></h5>
@@ -207,7 +207,7 @@
 					</div>
 					<a href="#" class="right carousel_advance" target="_blank"></a>
 				</div>
-				<p class="small">HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
+				<p class="small">True Blood<sup>&reg;</sup> and The Newsroom<sup>SM</sup> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO(R) subscription.</p>
 			</div>
 			
 		</div>
@@ -238,7 +238,10 @@
 			</div>
 			
 			<div class="copy">
-				<h3>10,000+ On Demand options<br />1,500+ HD On Demand options<br />3D On Demand<br />Premiums On Demand</h3>
+				<h3>Over 10,000 On Demand titles<br/>
+					Over 1,500 HD On Demand titles<br/>
+					3D On Demand movies<br />
+					Premiums On Demand</h3>
 				<p>Just go to Channel 1 and thousands of popular shows, blockbuster movies, exclusive content and even 3D movies are all available to you—instantly.</p>
 				<p><a href="http://www.charter.net/tv/login.php?prev_page=ptpb_vod%2Findex.php" target="_blank">See what&rsquo;s On Demand</a></p>
 				<p class="caption"><em>Fast Five</em> on Cinemax On Demand<sup>SM</sup>. Cinemax On Demand<sup>SM</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.
