Refixing HBO disclaimer

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			
 			<div class="copy">
 				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on Apple and Android devices.</p>
-				<p class="caption">True Blood<sup>&reg;</sup> on HBO GO<sup>&reg;</sup>. HBO GO is free (or included at no additional cost) with your HBO<sup>&reg;</sup> subscription.</p>
+				<p class="caption">True Blood<sup>&reg;</sup> and The Newsroom<sup>SM</sup> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO(R) subscription.</p>
 				
 				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse All Networks</a></h5>
 				<div class="carousel apps channelLineup">
@@ -207,7 +207,7 @@
 					</div>
 					<a href="#" class="right carousel_advance" target="_blank"></a>
 				</div>
-				<p class="small">True Blood<sup>&reg;</sup> and The Newsroom<sup>SM</sup> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO(R) subscription.</p>
+				<p class="small">HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
 			
 		</div>
