Darker text, uniform captions

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			
 			<div class="copy">
 				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on Apple and Android devices.</p>
-				<p class="caption">True Blood<sup>&reg;</sup> and The Newsroom<sup>SM</sup> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO(R) subscription.</p>
+				<p class="caption small">True Blood<sup>&reg;</sup> and The Newsroom<sup>SM</sup> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO(R) subscription.</p>
 				
 				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse All Networks</a></h5>
 				<div class="carousel apps channelLineup">
@@ -244,9 +244,7 @@
 					Premiums On Demand</h3>
 				<p>Just go to Channel 1 and thousands of popular shows, blockbuster movies, exclusive content and even 3D movies are all available to you—instantly.</p>
 				<p><a href="http://www.charter.net/tv/login.php?prev_page=ptpb_vod%2Findex.php" target="_blank">See what&rsquo;s On Demand</a></p>
-				<p class="caption"><em>Fast Five</em> on Cinemax On Demand<sup>SM</sup>. Cinemax On Demand<sup>SM</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.
-					<span class="small">Cinemax and related channels and service marks are the property of Home Box Office, Inc.</span>
-				</p>
+				<p class="small"><em>Fast Five</em> on Cinemax On Demand<sup>SM</sup>. Cinemax On Demand<sup>SM</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription. Cinemax and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
 				
 		</div>
