samll copy deletion

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 			</div>
 			
 			<div class="copy">
-				<p>Add some excitement to your smart devices with free downloadable apps that let you stream your favorite shows on Apple and Android devices.</p>
+				<p>Add some excitement to your smart devices with downloadable apps that let you stream your favorite shows on Apple and Android devices.</p>
 				<p class="caption small">True Blood<sup>&reg;</sup> and The Newsroom<sup>SM</sup> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO(R) subscription.</p>
 				
 				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse All Networks</a></h5>
