changing CTA URL

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
 			<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
 			<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
-			<li class="cta"><a href="http://charter.com/" title="Order Charter" target="_blank">Order Charter</a></li>
+			<li class="cta"><a href="http://connect.charter.com/landing/pages/DLP_shell.aspx?id=10A&intcmp=homehero1_AIP3Play_0612" title="Order Charter" target="_blank">Order Charter</a></li>
 			<li class="logo"><a href="http://www.charter.com" title="Charter.com" target="_blank"></a></li>
 	    </ul>
 	</nav>
