--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			-->
             <div class="heading">
 				<h1>Welcome to the Future of TV.</h1>
-				<h2>Entertainment is better when it’s everywhere.</h2>
+				<h2>Entertainment is better when it’s anywhere.</h2>
 			</div>
 			
 			<div class="copy clearfix">
@@ -186,7 +186,6 @@
 			
 			<div class="copy">
 				<p>Add some excitement to your smart devices with downloadable apps that let you stream your favorite shows on Apple and Android devices.</p>
-				<p class="caption small">True Blood<sup>&reg;</sup> and The Newsroom<sup>SM</sup> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO(R) subscription.</p>
 				
 				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse All Networks</a></h5>
 				<div class="carousel apps channelLineup">
@@ -206,6 +205,7 @@
 					</div>
 					<a href="#" class="right carousel_advance" target="_blank"></a>
 				</div>
+				<p class="small"><em>True Blood<sup>&reg;</sup></em> and <em>The Newsroom<sup>SM</sup></em> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO<sup>&reg;</sup> subscription.</p>
 				<p class="small">HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
 			
