--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	    <ul>
 			<li><a href="#intro" title="The Future of TV" class="active">The Future of TV</a></li>
 			<li><a href="#first" title="Charter TV in HD">Charter TV in HD</a></li>
-			<li><a href="#second" title="TV Everywhere">TV Everywhere</a></li>
+			<li><a href="#second" title="TV Anywhere">TV Anywhere</a></li>
 			<li><a href="#third" title="Charter On Demand">Charter On Demand</a></li>
 			<li><a href="#fourth" title="Charter DVR">Charter DVR<sup>&reg;</sup></a></li>
 			<li><a href="#fifth" title="The Future Is Now">The Future Is Now</a></li>
@@ -111,7 +111,7 @@
 			-->
             <div class="heading">
 				<h1>Welcome to the Future of TV.</h1>
-				<h2>Entertainment is better when it’s anywhere.</h2>
+				<h2>Entertainment is better when it’s everywhere.</h2>
 			</div>
 			
 			<div class="copy clearfix">
@@ -205,8 +205,7 @@
 					</div>
 					<a href="#" class="right carousel_advance" target="_blank"></a>
 				</div>
-				<p class="small"><em>True Blood<sup>&reg;</sup></em> and <em>The Newsroom<sup>SM</sup></em> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO<sup>&reg;</sup> subscription.</p>
-				<p class="small">HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
+				<p class="small"><em>True Blood<sup>&reg;</sup></em> and <em>The Newsroom<sup>SM</sup></em> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO<sup>&reg;</sup> subscription. HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
 			
 		</div>
