--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			
 			<div class="copy clearfix">
 				<div class="bg"></div>
-				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, over 10,000 On Demand titles, over 1,500 HD On Demand titles including movies in 3D, mobile channel apps and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
+				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, over 10,000 On Demand titles, over 1,500 HD On Demand options including movies in 3D, mobile channel apps and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
 				<div class="tootip">
         			<p>Scroll down, the future is here
         				<div class="arrow"></div>
@@ -237,7 +237,7 @@
 			
 			<div class="copy">
 				<h3>Over 10,000 On Demand titles<br/>
-					Over 1,500 HD On Demand titles<br/>
+					Over 1,500 HD On Demand options<br/>
 					3D On Demand movies<br />
 					Premiums On Demand</h3>
 				<p>Just go to Channel 1 and thousands of popular shows, blockbuster movies, exclusive content and even 3D movies are all available to you—instantly.</p>
@@ -275,9 +275,9 @@
 			<div class="copy">
 				<p>Reinvent the way you watch TV with new, more powerful DVRs. Create your own instant replays, pause live TV and record two shows or an entire season at once.</p>
 
-				<p>With 4 DVRs for only $19.99/mo and up to 780 hours of recording time, your whole home can watch what they want.</p>
+				<p>With service for up to 4 DVRs for only $19.99/mo and up to 780 hours of recording time, your whole home can watch what they want.</p>
 
-				<p class="small">Charter DVR receiver required for DVR service</p>
+				<p class="small">DVR equipment extra.</p>
 			</div>
 			
 		</div>
