concatenating js files, renamed a few

--- a/index.html
+++ b/index.html
@@ -335,13 +335,9 @@
     <!-- JavaScript at the bottom for fast page loading: http://developer.yahoo.com/performance/rules.html#js_bottom -->
 
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-    <script src="js/jquery_002.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
-    <script src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TweenMax.min.js"></script>
-	<script src="http://www.dottenpixel.com/greensock-v12-js/src/minified/TimelineMax.min.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery_003.js"></script>
-    <script src="js/jquery_004.js"></script>
+    <script src="js/vendor/TweenMax.min.js"></script>
+	<script src="js/vendor/TimelineMax.min.js"></script>
 
     <!-- scripts concatenated and minified via build script -->
     <script src="js/plugins.js"></script>
