--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="bg"></div>
 				<p>Charter is transforming the way you experience TV by enhancing every aspect of entertainment. With 100+ HD channels, over 10,000 On Demand titles, over 1,500 HD On Demand options including movies in 3D, mobile channel apps and more powerful DVRs, there are now more ways than ever to Let It All In.</p>
 				<div class="tootip">
-        			<p>Scroll down, the future is here
+        			<p>Scroll down. The future is here.
         				<div class="arrow"></div>
         			</p>
         		</div>	
@@ -187,7 +187,7 @@
 			<div class="copy">
 				<p>Add some excitement to your smart devices with downloadable apps that let you stream your favorite shows on Apple and Android devices.</p>
 				
-				<h5 class="carousel_header clearfix"><p>Start Watching Now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse All Networks</a></h5>
+				<h5 class="carousel_header clearfix"><p>Start watching now:</p><a href="http://charter.net/tv/3/browse/networks/" target="_blank">Browse all networks</a></h5>
 				<div class="carousel apps channelLineup">
 					<a class="left carousel_advance" href="#"></a>
 					<div class="carousel_area">
@@ -205,7 +205,7 @@
 					</div>
 					<a href="#" class="right carousel_advance" target="_blank"></a>
 				</div>
-				<p class="small"><em>True Blood<sup>&reg;</sup></em> and <em>The Newsroom<sup>SM</sup></em> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional costs with your HBO<sup>&reg;</sup> subscription. HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
+				<p class="small"><em>True Blood<sup>&reg;</sup></em> and <em>The Newsroom<sup>SM</sup></em> on HBO GO<sup>&reg;</sup>.  HBO GO<sup>&reg;</sup> is included at no additional cost with your HBO<sup>&reg;</sup> subscription. HBO GO<sup>&reg;</sup> and MAX GO<sup>&reg;</sup> are only accessible in the US where a high-speed broadband connection is available.  Minimum connection of 3 Mbps required for HD viewing. MAX GO<sup>&reg;</sup> is included at no additional cost with your Cinemax<sup>&reg;</sup> subscription.  HBO<sup>&reg;</sup>, Cinemax<sup>&reg;</sup> and related channels and service marks are the property of Home Box Office, Inc.</p>
 			</div>
 			
 		</div>
